# morse-code-converter

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.cross  docker-compose.yaml  flake.nix  rust-toolchain.toml  shell.nix  transformer_config.json
.cargo/: Cross.toml  config.toml
src/: main.rs  message_transformer.rs  morse_converter.rs  serial_send.rs
static/: index.html  settings.html
