[package]
name = "morse-code-converter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
clokwerk = "0.4.0"
ctrlc = "3.4.7"
futures-util = "0.3.31"
japanese = "0.1.2"
parking_lot = "0.12.4"
rand = "0.9.2"
ripmors = "0.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serialport = "4.7.2"
std-semaphore = "0.1.0"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tower = "0.5.2"
uuid = { version = "1.17.0", features = ["v4"] }
wana_kana = "4.0.0"
warp = "0.3.7"
